[package]
name = "tenable-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "openapi_generator/rust" }
log = "0.4.20"
rand = "0.7"
warp = "0.2"
lazy_static = "1.4"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
futures = { version = "0.3", default-features = false }
prometheus = { version = "0.9", features = ["process"] }
prometheus-client = "0.22.1"
actix-web = "4.5.1"
actix-rt = "2.9.0"
