[package]
name = "tenable-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "openapi_generator/rust" }

clap = { version = "4.5.1", features = ["derive"] }
actix-web-opentelemetry = { version = "0.16.0", features = ["metrics-prometheus"] }
actix-web-prom = "0.6.0"
actix-web = "4.3.0"
actix-rt = "2.9.0"
async-std = "1.12.0"
prometheus = "0.13.3"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.15.0"
lazy_static = "1.4.0"
